# ==============================================================================
# OBCore CMake File
# ==============================================================================

INCLUDE_DIRECTORIES(obcore SYSTEM)

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(obcore)
ADD_SUBDIRECTORY(inchi)
ADD_SUBDIRECTORY(formats)

